# llm-autoeval

./: Ablation_Study.md  README.md  benchmark.py  benchmark_medprompt.py  compiled_knn_mmlu_medical.json  evaluate.py  evaluate_medprompt.py  main.py  med.py  medprompt.py  pyproject.toml  runpod.sh  test.py  trial.py
llm_autoeval/: table.py
scripts/: example.py
